02/lab01/main2.tf
###############################
# 1. SG 생성
# 2. EC2 생성
###############################

# 1. SG 생성
# SG 생성
# * ingress: 80/tcp , 443/tcp, 22/tcp
# * egress: 전체 허용
# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/security_group
resource "aws_security_group" "mySG" {
  name        = "mySG"
  description = "Allow TLS 80/tcp, 443/tcp and all outbound traffic"
  vpc_id      = aws_vpc.myVPC.id

  tags = {
    Name = "mySG"
  }
}

resource "aws_vpc_security_group_ingress_rule" "mySG_22" {
  security_group_id = aws_security_group.mySG.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 22
  to_port           = 22
  ip_protocol       = "tcp"
}

resource "aws_vpc_security_group_ingress_rule" "mySG_80" {
  security_group_id = aws_security_group.mySG.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  to_port           = 80
  ip_protocol       = "tcp"
}

resource "aws_vpc_security_group_ingress_rule" "mySG_443" {
  security_group_id = aws_security_group.mySG.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 443
  to_port           = 443
  ip_protocol       = "tcp"
}

resource "aws_vpc_security_group_egress_rule" "mySG_all" {
  security_group_id = aws_security_group.mySG.id
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1" # semantically equivalent to all ports
}

# 2. EC2 생성
# 1) Keypair 생성
# 2) EC2 생성
# * 새로 생성된 서브넷(myPubSN)을 직접 지정해야 함 -> 안할 경우 default값으로 경로가 설정된다
# * user_data(80/tpc, 443/tcp)
# * security group(mySG)

# 키 페어 생성
# ssh-keygen -t rsa -N "" -f ~/.ssh/mykeypair
# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/key_pair
resource "aws_key_pair" "mykeypair" {
  key_name   = "mykeypair"
  region     = "us-east-2"
  public_key = file("~/.ssh/mykeypair.pub")
}

resource "aws_instance" "myEC2" {
  ami                         = "ami-00e428798e77d38d9"
  instance_type               = "t3.micro"
  subnet_id                   = aws_subnet.myPubSN.id
  vpc_security_group_ids      = [aws_security_group.mySG.id]
  key_name                    = "mykeypair"
  user_data_replace_on_change = true
  user_data                   = <<-EOF
        #!/bin/bash
        dnf install -y httpd mod_ssl
        echo "My Web Server Test Page" > /var/www/html/index.html
        systemctl enable --now httpd
        EOF
  tags = {
    Name = "myEC2"
  }
}
